--- a/src/WebAppBiblioteca/wwwroot/Content/wab.css
+++ b/src/WebAppBiblioteca/wwwroot/Content/wab.css
@@ -1,16 +1,39 @@
-﻿body {
-    padding-top: 70px;
+﻿    /*!
+ * Start Bootstrap - Shop Homepage (http://startbootstrap.com/)
+ * Copyright 2013-2016 Start Bootstrap
+ * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE)
+ */
+
+body {
+    padding-top: 70px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
 }
+
 .slide-image {
     width: 100%;
 }
 
-.caurousel-holder {
+@media (min-width: 992px) {
+  body {
+    padding-top: 56px;
+  }
+}
+
+.card {
+  height: 100%;
+}
+
+.carousel-holder {
     margin-bottom: 30px;
 }
 
-.caurousel-control {
+.carousel-control,
+.item {
     border-radius: 4px;
+}
+
+.caption {
+    height: 130px;
+    overflow: hidden;
 }
 
 .caption h4 {
@@ -30,7 +53,7 @@
 .thumbnail {
     padding: 0;
 }
-    
+
 .thumbnail .caption-full {
     padding: 9px;
     color: #333;
