--- a/src/WebAppBiblioteca/views/Libros/ListaLibros.cshtml
+++ b/src/WebAppBiblioteca/views/Libros/ListaLibros.cshtml
@@ -2,16 +2,5 @@
 
 @foreach (var libros in Model.Libros)
 {
-    <div class="col-lg-3 col-md-6 mb-4">
-        <div class="card">
-            <img class="card-img-top" src="@libros.ImagenPreviaURL" alt="">
-            <div class="card-body">
-                <h4 class="card-title">@libros.NombreLibro</h4>
-                <p class="card-text">@libros.PreCostoLibro.ToString("c")</p>
-            </div>
-            <div class="card-footer">
-                    <a href="#" class="btn btn-primary">detalles</a>
-</div>
-        </div>
-    </div>
+    @Html.Partial("VerLibros", libros)
 }
